--- a/app/src/main/res/menu/menu_jufaja.xml
+++ b/app/src/main/res/menu/menu_jufaja.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/rvTils"
+        android:id="@+id/rvBase"
         android:icon="@drawable/ic_construction"
         android:title="TilsConstr."
         app:showAsAction="always" />
