--- a/app/src/main/res/menu/menu_game.xml
+++ b/app/src/main/res/menu/menu_game.xml
@@ -2,6 +2,12 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/addTile"
+        android:title="Add Tile" />
+    <item
+        android:id="@+id/profile"
+        android:title="P.Base" />
+    <item
         android:id="@+id/restartGame"
         android:title="Restart" />
 </menu>
