--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/alegreya_sans_sc_bold_italic</item>
+        <item>@font/arima_madurai_thin</item>
         <item>@font/audiowide</item>
         <item>@font/bangers</item>
+        <item>@font/cabin</item>
+        <item>@font/coda</item>
         <item>@font/michroma</item>
         <item>@font/syncopate_bold</item>
+        <item>@font/vt323</item>
     </array>
 </resources>
