--- a/app/src/main/res/layout/item_tils.xml
+++ b/app/src/main/res/layout/item_tils.xml
@@ -16,26 +16,44 @@
         android:background="#434343"
         android:orientation="vertical" />
 
-    <ImageView
-        android:id="@+id/tileImage"
-        android:layout_width="339dp"
-        android:layout_height="60dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="6dp"
-        android:scaleType="fitStart"
-        tools:srcCompat="@tools:sample/avatars" />
+    <LinearLayout
+        android:id="@+id/txDataNo"
+        android:layout_width="86dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="50dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txNo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/coda"
+            android:text="1"
+            android:textAlignment="center"
+            android:textColor="#C8C8C8"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/tileImage"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            android:scaleType="centerCrop"
+            tools:srcCompat="@tools:sample/avatars" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/txDataX"
-        android:layout_width="85dp"
+        android:layout_width="wrap_content"
         android:layout_height="55dp"
-        android:layout_marginLeft="90dp"
+        android:layout_marginLeft="160dp"
         android:layout_marginTop="10dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/txCodeX"
-            android:layout_width="50dp"
+            android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_weight="1"
             android:fontFamily="@font/coda"
@@ -46,7 +64,7 @@
 
         <TextView
             android:id="@+id/txIdX"
-            android:layout_width="50dp"
+            android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_marginTop="7dp"
             android:layout_weight="1"
@@ -60,15 +78,15 @@
 
     <LinearLayout
         android:id="@+id/txDataY"
-        android:layout_width="85dp"
+        android:layout_width="wrap_content"
         android:layout_height="55dp"
-        android:layout_marginLeft="220dp"
+        android:layout_marginLeft="240dp"
         android:layout_marginTop="10dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/txNickX"
-            android:layout_width="50dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_weight="1"
             android:fontFamily="@font/coda"
@@ -79,7 +97,7 @@
 
         <TextView
             android:id="@+id/txValueX"
-            android:layout_width="50dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="7dp"
             android:layout_weight="1"
@@ -93,15 +111,15 @@
 
     <LinearLayout
         android:id="@+id/txXData"
-        android:layout_width="85dp"
+        android:layout_width="wrap_content"
         android:layout_height="65dp"
-        android:layout_marginLeft="130dp"
+        android:layout_marginLeft="200dp"
         android:layout_marginTop="7dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/txCode"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/coda"
@@ -113,7 +131,7 @@
 
         <TextView
             android:id="@+id/txId"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/coda"
@@ -127,15 +145,15 @@
 
     <LinearLayout
         android:id="@+id/txYData"
-        android:layout_width="85dp"
+        android:layout_width="wrap_content"
         android:layout_height="65dp"
-        android:layout_marginLeft="270dp"
+        android:layout_marginLeft="284dp"
         android:layout_marginTop="7dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/txNick"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/coda"
@@ -147,7 +165,7 @@
 
         <TextView
             android:id="@+id/txValue"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/coda"
