--- a/app/src/main/res/layout/activity_addtile.xml
+++ b/app/src/main/res/layout/activity_addtile.xml
@@ -20,24 +20,11 @@
         <ImageView
             android:id="@+id/ivImageUrli"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="17dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginBottom="17dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             tools:srcCompat="@tools:sample/avatars" />
 
-        <Button
-            android:id="@+id/btnAddTile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="100dp"
-            android:layout_weight="1"
-            android:fontFamily="@font/cabin"
-            android:text="Upload Tile"
-            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -103,14 +90,32 @@
             android:textColor="#C8C8C8"
             android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/btnSubmit"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="125dp"
-            android:layout_weight="1"
-            android:fontFamily="@font/cabin"
-            android:text="Submit"
-            android:textStyle="bold" />
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/btnAddTile"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_margin="7dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/cabin"
+                android:text="Upload Tile"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btnSubmit"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_margin="7dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/cabin"
+                android:text="Submit"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
