add MainActivity.kt/xml-mod_0.3 add GameActivity.kt/xml-mod_0.4 add JufajaActivity.kt/xml_0.2 add ProfilActivity.kt_0.1 add TilsAdapter.kt_mod_0.3 add JFJAdapter.kt_0.1 add Tils.kt_mod-0.4 add item_tils.xml_mod-0.4 add item_jfj.xml_0.1 add AddtileActivity.kt/xml_0.3 add Diverse-mod_a.d(*Tils=Pils_TilsAdapter.)

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,7 +7,7 @@
     tools:context=".GameActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvtTils"
+        android:id="@+id/rvPils"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#0A0A0A"
@@ -26,7 +26,7 @@
         android:layout_marginBottom="24dp"
         android:clickable="true"
         android:tint="@android:color/white"
-        app:backgroundTint="#80FFFFFF"
+        app:backgroundTint="#4DFFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@android:drawable/ic_input_add" />
