--- a/app/src/main/res/layout/activity_addtile.xml
+++ b/app/src/main/res/layout/activity_addtile.xml
@@ -7,25 +7,30 @@
     android:background="#0A0A0A"
     tools:context=".AddtileActivity">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="7dp"
-        android:layout_weight="1"
-        android:background="#464646"
-        android:orientation="vertical">
+        android:layout_weight="1">
 
         <ImageView
             android:id="@+id/ivImageUrli"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="36dp"
+            android:layout_marginEnd="36dp"
+            android:layout_marginBottom="36dp"
             android:layout_weight="1"
             android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
             tools:srcCompat="@tools:sample/avatars" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,7 +63,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:fontFamily="@font/cabin"
-            android:hint="Code"
+            android:hint="Code (optional)"
             android:inputType="textPersonName"
             android:textAlignment="center"
             android:textColor="#C8C8C8"
@@ -86,6 +91,19 @@
             android:fontFamily="@font/cabin"
             android:hint="Value"
             android:inputType="number|numberDecimal"
+            android:textAlignment="center"
+            android:textColor="#C8C8C8"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/etColor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:fontFamily="@font/cabin"
+            android:hint="Color (optional)"
+            android:inputType="textPersonName"
             android:textAlignment="center"
             android:textColor="#C8C8C8"
             android:textStyle="bold" />
