--- a/app/src/main/res/layout/item_jfj.xml
+++ b/app/src/main/res/layout/item_jfj.xml
@@ -9,9 +9,10 @@
         android:id="@+id/btnImageJFJ"
         android:layout_width="57dp"
         android:layout_height="34dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
         android:background="#00FFFFFF"
+        android:clickable="true"
         android:scaleType="fitXY"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,15 +26,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/audiowide"
-        android:hint="0X"
         android:textAlignment="center"
-        android:textColor="#5E000000"
+        android:textColor="#ff6c24"
         android:textColorHint="#F31010"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btnImageJFJ" />
+        app:layout_constraintTop_toTopOf="@+id/btnImageJFJ"
+        tools:text="0X" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
