started Version 1.0 add MainActivity.kt/xml-mod_1.0 add GameActivity.kt/xml-mod_0.5 add JufajaActivity.kt/xml-mod_1.0 add ProfilActivity.kt_0.1 add TilsAdapter.kt-mod_0.3 add JFJAdapter.kt-mod_0.2 add Tils.kt_mod-0.4 add item_tils.xml-mod-0.4 add item_jfj.xml-mod_0.2 add AddtileActivity.kt/xml-mod_0.4 add Diverse-mod_a.d(*Tils=Pils_TilsAdapter.) add png(Buttons-3x/btn_ju001/btn_fa001/btn_ja001) add vector(Button-1x/btn_RB) !!{17-10-21}>mod fun switchP40P42, not working<(line_328"Non Tile ERROR!")=cancelled 31102021 mod in themes.xml add vector(tils 6x/ic_xxx_groen/blauw/silver/rood/amber/geel)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/backsplash007"
     tools:context=".MainActivity">
 
+
     <TextView
         android:id="@+id/tvHomeLogo1"
         android:layout_width="wrap_content"
@@ -52,14 +53,15 @@
         android:id="@+id/etNick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="67dp"
+        android:layout_marginTop="60dp"
         android:ems="9"
         android:fontFamily="@font/bangers"
         android:hint="Enter your Nick-name"
         android:inputType="textPersonName"
         android:textAlignment="center"
-        android:textColor="?attr/colorControlNormal"
-        android:textSize="30sp"
+        android:textColor="#E91E63"
+        android:textColorHint="#84FFFF"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="@+id/tvHomeLogo1"
         app:layout_constraintStart_toStartOf="@+id/tvHomeLogo1"
         app:layout_constraintTop_toTopOf="@+id/tvHomeLogo1" />
